--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-dist/
-build/
+dist/*
+build/*
+.DS_Store
+.idea
+.vscode
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
