chore: update .gitignore and improve code consistency
- Simplified .gitignore by replacing multiple lines with directory entries for dist and build.
- Added missing newlines in various files for better code formatting.
- Updated class method definitions in the Debug Logger and Deployment Manager classes to follow consistent formatting.

These changes enhance code readability and maintainability across the project.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,9 @@
       "json",
       "mbstring",
       "pcre",
+      "SPL",
       "standard",
+      "zip",
       "wordpress",
       "acf-pro"
     ],
