--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,2 @@
-dist/*
-build/*
-.DS_Store
-.idea
-.vscode
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+/dist
+/build
