--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,11 +28,10 @@
       "SPL",
       "standard",
       "zip",
-      "wordpress",
       "acf-pro"
     ],
     "intelephense.environment.includePaths": [
-      "stubs"
+      "vendor/php-stubs/wordpress-stubs"
     ]
   }
   
